--- a/p1ch3/1_tensors.ipynb
+++ b/p1ch3/1_tensors.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-06T17:37:04.113775Z",
+     "start_time": "2025-05-06T17:37:04.107293Z"
+    }
+   },
    "source": [
     "a = [1.0, 2.0, 1.0]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
