--- a/p1ch5/1_parameter_estimation.ipynb
+++ b/p1ch5/1_parameter_estimation.ipynb
@@ -2,73 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
+    },
+    "ExecuteTime": {
+     "end_time": "2025-05-06T17:50:53.223259Z",
+     "start_time": "2025-05-06T17:50:39.572553Z"
     }
    },
-   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import torch\n",
     "torch.set_printoptions(edgeitems=2, linewidth=75)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
+    },
+    "ExecuteTime": {
+     "end_time": "2025-05-06T17:50:57.212067Z",
+     "start_time": "2025-05-06T17:50:57.206390Z"
     }
    },
-   "outputs": [],
    "source": [
     "t_c = [0.5,  14.0, 15.0, 28.0, 11.0,  8.0,  3.0, -4.0,  6.0, 13.0, 21.0]\n",
     "t_u = [35.7, 55.9, 58.2, 81.9, 56.3, 48.9, 33.9, 21.8, 48.4, 60.4, 68.4]\n",
     "t_c = torch.tensor(t_c)\n",
     "t_u = torch.tensor(t_u)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
+    },
+    "ExecuteTime": {
+     "end_time": "2025-05-06T17:51:06.091125Z",
+     "start_time": "2025-05-06T17:51:06.086592Z"
     }
    },
-   "outputs": [],
    "source": [
     "def model(t_u, w, b):\n",
     "    return w * t_u + b"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
+    },
+    "ExecuteTime": {
+     "end_time": "2025-05-06T17:51:09.980341Z",
+     "start_time": "2025-05-06T17:51:09.976692Z"
     }
    },
-   "outputs": [],
    "source": [
     "def loss_fn(t_p, t_c):\n",
     "    squared_diffs = (t_p - t_c)**2\n",
     "    return squared_diffs.mean()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
+    },
+    "ExecuteTime": {
+     "end_time": "2025-05-06T17:53:33.886771Z",
+     "start_time": "2025-05-06T17:52:20.055728Z"
     }
    },
+   "source": [
+    "w = torch.ones(())\n",
+    "b = torch.zeros(())\n",
+    "\n",
+    "t_p = model(t_u, w, b)\n",
+    "t_p"
+   ],
    "outputs": [
     {
      "data": {
@@ -77,43 +103,41 @@
        "        21.8000, 48.4000, 60.4000, 68.4000])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "w = torch.ones(())\n",
-    "b = torch.zeros(())\n",
-    "\n",
-    "t_p = model(t_u, w, b)\n",
-    "t_p"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false
+    },
+    "ExecuteTime": {
+     "end_time": "2025-05-06T17:54:18.025527Z",
+     "start_time": "2025-05-06T17:54:18.018645Z"
     }
    },
+   "source": [
+    "loss = loss_fn(t_p, t_c)\n",
+    "loss"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1763.8846)"
+       "tensor(1763.8848)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "loss = loss_fn(t_p, t_c)\n",
-    "loss"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "code",
