--- a/p1ch6/1_neural_networks.ipynb
+++ b/p1ch6/1_neural_networks.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-11T04:08:44.166500Z",
+     "start_time": "2025-05-11T04:08:40.275353Z"
+    }
+   },
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -12,24 +15,18 @@
     "import torch.optim as optim\n",
     "\n",
     "torch.set_printoptions(edgeitems=2, linewidth=75)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([11, 1])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-11T04:10:24.518287Z",
+     "start_time": "2025-05-11T04:10:24.512602Z"
     }
-   ],
+   },
    "source": [
     "t_c = [0.5,  14.0, 15.0, 28.0, 11.0,  8.0,  3.0, -4.0,  6.0, 13.0, 21.0]\n",
     "t_u = [35.7, 55.9, 58.2, 81.9, 56.3, 48.9, 33.9, 21.8, 48.4, 60.4, 68.4]\n",
@@ -37,24 +34,29 @@
     "t_u = torch.tensor(t_u).unsqueeze(1) # <1>\n",
     "\n",
     "t_u.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([5, 6, 1, 4, 9, 0, 3, 2, 8]), tensor([ 7, 10]))"
+       "torch.Size([11, 1])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-11T05:03:59.465550Z",
+     "start_time": "2025-05-11T05:03:59.453325Z"
+    }
+   },
    "source": [
     "n_samples = t_u.shape[0]\n",
     "n_val = int(0.2 * n_samples)\n",
@@ -65,23 +67,51 @@
     "val_indices = shuffled_indices[-n_val:]\n",
     "\n",
     "train_indices, val_indices"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1, 7, 0, 3, 2, 4, 9, 8, 5]), tensor([10,  6]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-11T05:12:31.388462Z",
+     "start_time": "2025-05-11T05:12:31.380676Z"
+    }
+   },
    "source": [
     "t_u_train = t_u[train_indices]\n",
     "t_c_train = t_c[train_indices]\n",
     "\n",
     "t_u_val = t_u[val_indices]\n",
     "t_c_val = t_c[val_indices]\n",
+    "print(t_u_val)\n",
     "\n",
     "t_un_train = 0.1 * t_u_train\n",
     "t_un_val = 0.1 * t_u_val"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[68.4000],\n",
+      "        [33.9000]])\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
